--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -88,7 +88,7 @@
                             <div class="form-outline mb-3 text-danger" id='message'>{{error}}</div>
                             
                             <!-- Save changes button-->
-                            <button class="btn btn-primary" type="submit">Conferma</button>
+                            <button class="btn btn-primary" id= 'btnSubmit' type="submit" hidden >Conferma</button>
                         </form>
                     </div>
                 </div>
