--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,56 +1,141 @@
 <!-- Usare il foglio di stile style-profile.css per tutti gli stili usati -->
+
 <body>
     {{> header}}
 
     <div class="container-xl px-4 mt-4">
-        <!-- Account page navigation-->
+        <!-- Account page navigation
 
-        <hr class="mt-0 mb-4">
         <div class="row">
             <div class="col-xl-3">
-                <!-- Profile picture card-->
+                <!-- Profile picture card--
                 <div class="card mb-4 mb-xl-0">
                     <div class="card-body text-center">
                         Menu di navigazione
-                        <!-- TBC -->
+                        <!-- TBC --
                     </div>
                 </div>
             </div>
 
-            <div class="col-xl-9">
-                <div class="card mb-4">
-                    <div class="card-header">Le tue prenotazioni</div>
-                    <div class="card-body">
-                        <!-- TBC -->
-                        {{#if notEmpty}}
-                            <table class="table">
-                                <!-- Header della tabella -->
-                                <tr>
-                                    <th>Titolo evento</th>
-                                    <th>Data evento</th>
-                                    <th>Azioni</th>
-                                </tr>
 
-                                <!-- Dati prenotazioni -->
-                                {{#each prenotazioni}}
-                                    <tr>
-                                        <td>{{titolo}}</td>
-                                        <td>{{dataora}}</td>
-                                        <td>
-                                            <button class="btn btn-danger" onclick="unbook({{id}})">Disdici</button>
-                                        </td>
-                                    </tr>
-                                {{/each}}
-                            </table>
+            <!-- cambio layout-->
 
-                        {{else}}
-                            Non ci sono prenotazioni recenti.
-                        {{/if}}
+        <div class="col-xl-9">
+            <ul class="nav nav-tabs" id="prof-tab" role="tablist">
+                <li class="nav-item">
+                    <a class="nav-link" id="prenotazioniTab" data-toggle="tab" onclick="showPrenotazioni()"
+                        href="#prenotazioni" role="tab" aria-controls="home" aria-selected="true">prenotazioni</a>
+
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" id="creaTab" data-toggle="tab" onclick="showEvento()" role="tab"
+                        aria-controls="creaEvento" aria-selected="true">crea nuovo evento </a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" id="adminTab" data-toggle="tab" onclick="showAdmin()" href="#admin" role="tab"
+                        aria-controls="admin" aria-selected="false">gestione Organizzatori</a>
+
+                </li>
+
+
+            </ul>
+
+            <div class="tab-conten" id="prof-tabContent">
+
+
+                <div class="tab-pane fade" id="prenotazioni" role="tabpanel" aria-labelledby="prenotazioni-tab">
+
+                    {{#if notEmpty}}
+                    <table class="table">
+                        <!-- Header della tabella -->
+                        <tr>
+                            <th>Titolo evento</th>
+                            <th>Data evento</th>
+                            <th>Azioni</th>
+                        </tr>
+
+                        <!-- Dati prenotazioni -->
+                        {{#each prenotazioni}}
+                        <tr>
+                            <td>{{titolo}}</td>
+                            <td>{{dataora}}</td>
+                            <td>
+                                <button class="btn btn-danger" onclick="unbook({{id}})">Disdici</button>
+                            </td>
+                        </tr>
+                        {{/each}}
+                    </table>
+
+                    {{else}}
+                    Non ci sono prenotazioni recenti.
+                    {{/if}}
+
+                </div>
+
+                <div class="tab-pane fade show active" id="creaEvento" role="tabpanel" aria-labelledby="creaEvento-tab">
+
+                    {{#if privilegi}}
+                    <form action="/createEvent" method="post" class="form-signin" onsubmit="return validaForm()">
+
+
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
+                                    <input type="text" class="form-control" id='eventTitle' placeholder="Titolo Evento">
+                                </div>
+                                <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
+                                    <select name="type" id="eventType" required>
+                                        
+                                        <option value="" selected>Tipo</option>
+                                        <option value="S">singolo</option>
+                                        <option value="T">torneo</option>
+                                        <option value="U">altro</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group col-md-6">
+
+
+                            <div class="form-outline mb-3" id="dateType">
+                                <!-- Data evento -->
+                                <label for="data">Data e ora</label>
+                                <input type="date" id="data" name="data" />
+                                <input type="time" id="time" name="time" />
+
+                                <!-- Tipo -->
+
+                            </div>
+                            <hr>
+
+                    </form>
+                    
+
+
+                    {{else}}
+                    Chiedi a un admin per organizzare il tuo evento
+                    {{/if}}
+
+                </div>
+
+                <div class="tab-pane fade" id="admin" role="tabpanel" aria-labelledby="admin-Tab">
+                    <div class="card mb-4">
+
                     </div>
                 </div>
+
             </div>
+
         </div>
+
+
+
+
     </div>
+
+
+
 
     <!-- Includi il footer -->
     {{> footer}}
