--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -86,14 +86,15 @@
                                 </div>
                                 <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
                                     <select name="type" id="eventType" required>
-                                        
+
                                         <option value="" selected>Tipo</option>
-                                        <option value="S">singolo</option>
-                                        <option value="T">torneo</option>
-                                        <option value="U">altro</option>
+                                        <option value="singolo">singolo</option>
+                                        <option value="torne">torneo</option>
+                                        <option value="altro">altro</option>
                                     </select>
                                 </div>
                             </div>
+
                         </div>
                         <div class="form-group col-md-6">
 
@@ -101,16 +102,15 @@
                             <div class="form-outline mb-3" id="dateType">
                                 <!-- Data evento -->
                                 <label for="data">Data e ora</label>
-                                <input type="date" id="data" name="data" />
-                                <input type="time" id="time" name="time" />
+                                <input type="datetime-local" id="dataTime" name="dataTime" value="2018-06-12T19:30"
+                                    min="2022-02-12T20:30" max="2023-02-12T20:30" onclick="setDates()">
 
-                                <!-- Tipo -->
 
                             </div>
                             <hr>
 
                     </form>
-                    
+
 
 
                     {{else}}
